TagsInput: fix overflow styles

--- a/src/assets/less/components/tags-input.less
+++ b/src/assets/less/components/tags-input.less
@@ -67,7 +67,6 @@
 		box-shadow: 0 2px 2px rgba(0, 0, 0, .04);
 
 		@media (min-width: @screen-sm-min) {
-			overflow-x: unset;
 			height: 40px;
 			flex-direction: row;
 			justify-content: flex-end;
@@ -163,6 +162,7 @@
 				height: 100%;
 				padding: 0 16px;
 				margin-top: 0;
+				min-width: 140px;
 			}
 
 			&.disabled-input {
@@ -189,6 +189,7 @@
 				height: 0;
 				margin: 0;
 				min-height: auto;
+				min-width: 0;
 			}
 		}
 	}
